// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUpPage renders the sign in page 1`] = `
<div>
  <main
    class="sign-up"
  >
    <div
      class="sign-up__content"
    >
      <article
        class="sign-up__form"
      >
        <section
          class="sign-up__header"
        >
          <img
            alt="DIMO Logo"
            class="w-44 h-6"
            src="/images/build-on-dimo.png"
          />
          <p>
            Get started building
          </p>
        </section>
        <section
          class="sign-up__buttons"
        >
          <button
            class="button dark"
            role="sign-in-button"
            type="button"
          >
            <svg
              class="icon sm"
              fill="none"
              role="google-icon"
              viewBox="0 0 25 25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M21.332 12.4909C21.332 11.8386 21.2735 11.2113 21.1647 10.6091H12.5V14.1679H17.4513C17.238 15.3179 16.5898 16.2922 15.6155 16.9446V19.2529H18.5887C20.3284 17.6513 21.332 15.2928 21.332 12.4909Z"
                fill="#4285F4"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M12.5 21.482C14.984 21.482 17.0665 20.6582 18.5887 19.2531L15.6155 16.9448C14.7916 17.4968 13.7378 17.8229 12.5 17.8229C10.1038 17.8229 8.07564 16.2046 7.35219 14.03H4.27855V16.4137C5.79237 19.4204 8.90364 21.482 12.5 21.482Z"
                fill="#34A853"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M7.35219 14.03C7.16818 13.478 7.06364 12.8884 7.06364 12.282C7.06364 11.6757 7.16818 11.086 7.35219 10.534V8.15039H4.27855C3.65546 9.39239 3.3 10.7975 3.3 12.282C3.3 13.7666 3.65546 15.1717 4.27855 16.4137L7.35219 14.03Z"
                fill="#FBBC05"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M12.5 6.74112C13.8507 6.74112 15.0635 7.2053 16.0169 8.11694L18.6556 5.47821C17.0624 3.99367 14.9798 3.08203 12.5 3.08203C8.90364 3.08203 5.79237 5.14367 4.27855 8.15039L7.35219 10.534C8.07564 8.35949 10.1038 6.74112 12.5 6.74112Z"
                fill="#EA4335"
                fill-rule="evenodd"
              />
            </svg>
            Sign Up
          </button>
          <button
            class="button dark"
            role="sign-in-button"
            type="button"
          >
            <svg
              class="icon sm"
              fill="none"
              role="github-icon"
              viewBox="0 0 25 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 0.851807C6.02836 0.851807 0.780518 6.09873 0.780518 12.5713C0.780518 17.7494 4.13851 22.1424 8.79507 23.692C9.38075 23.8005 9.59583 23.4378 9.59583 23.1282C9.59583 22.8488 9.58489 21.9255 9.57992 20.9463C6.31945 21.6552 5.63147 19.5635 5.63147 19.5635C5.09837 18.2089 4.33024 17.8488 4.33024 17.8488C3.26698 17.1214 4.41039 17.1362 4.41039 17.1362C5.58726 17.219 6.20695 18.344 6.20695 18.344C7.2522 20.1357 8.94857 19.6177 9.61733 19.3183C9.72248 18.5607 10.0263 18.0438 10.3614 17.7512C7.75837 17.4547 5.0219 16.4498 5.0219 11.9593C5.0219 10.6798 5.47972 9.6343 6.22947 8.8136C6.10777 8.51837 5.70666 7.32643 6.34298 5.71214C6.34298 5.71214 7.32711 5.39715 9.56669 6.91346C10.5015 6.65371 11.5041 6.52356 12.5 6.51915C13.496 6.52356 14.4994 6.65371 15.436 6.91346C17.6729 5.39715 18.6556 5.71214 18.6556 5.71214C19.2935 7.32643 18.8922 8.51837 18.7705 8.8136C19.5219 9.6343 19.9766 10.6797 19.9766 11.9593C19.9766 16.4605 17.235 17.4517 14.6254 17.7418C15.0457 18.1055 15.4202 18.8187 15.4202 19.9121C15.4202 21.4801 15.4066 22.7422 15.4066 23.1282C15.4066 23.4401 15.6176 23.8055 16.2117 23.6905C20.8657 22.139 24.2195 17.7477 24.2195 12.5713C24.2195 6.09873 18.9724 0.851807 12.5 0.851807Z"
                fill="white"
              />
              <path
                d="M5.16973 17.5461C5.14399 17.6043 5.05226 17.6218 4.96889 17.5819C4.88387 17.5437 4.83608 17.4642 4.86365 17.4058C4.88893 17.3459 4.98066 17.3291 5.0655 17.3694C5.1507 17.4075 5.19923 17.4877 5.16973 17.5461ZM5.74621 18.0605C5.69033 18.1123 5.58104 18.0883 5.50687 18.0064C5.43021 17.9246 5.41587 17.8155 5.47258 17.7628C5.53021 17.711 5.63619 17.7352 5.71303 17.817C5.78969 17.8996 5.80458 18.0082 5.74612 18.0606M6.14172 18.7186C6.06984 18.7685 5.95238 18.7217 5.87986 18.6175C5.80807 18.5134 5.80807 18.3884 5.88142 18.3383C5.95421 18.2882 6.06984 18.3332 6.14337 18.4366C6.21507 18.5426 6.21507 18.6676 6.14163 18.7187M6.81049 19.4808C6.74624 19.5516 6.60947 19.5327 6.50928 19.436C6.40689 19.3415 6.37831 19.2074 6.44274 19.1365C6.50772 19.0656 6.64532 19.0855 6.74624 19.1814C6.84799 19.2757 6.87906 19.4108 6.81058 19.4808M7.67485 19.7382C7.64663 19.8299 7.51483 19.8717 7.3821 19.8327C7.24956 19.7925 7.1628 19.685 7.18954 19.5922C7.21712 19.4999 7.34947 19.4564 7.48321 19.4981C7.61556 19.5381 7.70252 19.6448 7.67494 19.7382M8.6587 19.8473C8.66201 19.944 8.54941 20.0242 8.41007 20.0259C8.2699 20.0289 8.15657 19.9507 8.1551 19.8557C8.1551 19.7581 8.26512 19.6786 8.4052 19.6763C8.54454 19.6736 8.6587 19.7513 8.6587 19.8473ZM9.62508 19.8103C9.64181 19.9046 9.54494 20.0014 9.4066 20.0272C9.27057 20.052 9.14465 19.9938 9.12728 19.9003C9.11036 19.8036 9.20908 19.7069 9.34484 19.6818C9.48344 19.6577 9.60744 19.7144 9.62508 19.8103Z"
                fill="white"
              />
            </svg>
            Sign Up
          </button>
        </section>
        <section
          class="sign-up__extra-links"
        >
          <a
            class="anchor primary"
            href="/sign-in"
          >
            Already have an account?
          </a>
          <p
            class="terms-caption"
          >
            by signing up, you are agreeing to our
             
            <a
              class="anchor grey underline"
              href="#"
            >
              terms of service
            </a>
             
            and
             
            <a
              class="anchor grey underline"
              href="#"
            >
              privacy policy
            </a>
          </p>
        </section>
      </article>
    </div>
  </main>
  <div
    aria-live="assertive"
    class="pointer-events-none fixed inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6"
  >
    <div
      class="flex w-full flex-col items-center space-y-4 sm:items-end"
    />
  </div>
</div>
`;

exports[`SignUpPage renders the sign in page at the company info form 1`] = `
<div>
  <main
    class="sign-up"
  >
    <div
      class="sign-up__content"
    >
      <article
        class="sign-up__form"
      >
        <section
          class="sign-up__header"
        >
          <img
            alt="DIMO Logo"
            class="w-44 h-6"
            src="/images/build-on-dimo.png"
          />
          <p>
            Our last question
          </p>
        </section>
        <form
          class="flex flex-col gap-4 w-full max-w-sm pt-4"
        >
          <label
            class="label text-xs text-medium"
            for="name"
          >
            Company name
            <input
              class="text-field"
              name="name"
              placeholder="DIMO"
              role="company-name-input"
              type="text"
            />
          </label>
          <label
            class="label text-xs text-medium"
            for="website"
          >
            Company website
            <input
              class="text-field"
              name="website"
              placeholder="www.dimo.zone"
              role="company-website-input"
              type="text"
            />
          </label>
          <label
            class="label text-xs text-medium"
            for="region"
          >
            Main Operating Region *
            <div
              class="select-field"
              role="company-region"
            >
              <select
                name="region"
                placeholder="Select"
                role="company-region-select"
              >
                <option />
                <option
                  value="North America"
                >
                  North America
                </option>
                <option
                  value="Latin America & Caribbean"
                >
                  Latin America & Caribbean
                </option>
                <option
                  value="Oceania"
                >
                  Oceania
                </option>
                <option
                  value="Northern & Western Europe"
                >
                  Northern & Western Europe
                </option>
                <option
                  value="Africa"
                >
                  Africa
                </option>
                <option
                  value="East & Southeast Asia"
                >
                  East & Southeast Asia
                </option>
                <option
                  value="Middle East & Central Asia "
                >
                  Middle East & Central Asia 
                </option>
                <option
                  value="South Asia"
                >
                  South Asia
                </option>
                <option
                  value="Eastern Europe"
                >
                  Eastern Europe
                </option>
              </select>
              <p
                class=""
                role="company-region-text"
              >
                Select
              </p>
              <svg
                class="w-4 h-4"
                fill="none"
                role="chevron-down-icon"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m19.5 8.25-7.5 7.5-7.5-7.5"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <div
                class="custom-menu"
              >
                <div
                  class="custom-item"
                >
                  North America
                </div>
                <div
                  class="custom-item"
                >
                  Latin America & Caribbean
                </div>
                <div
                  class="custom-item"
                >
                  Oceania
                </div>
                <div
                  class="custom-item"
                >
                  Northern & Western Europe
                </div>
                <div
                  class="custom-item"
                >
                  Africa
                </div>
                <div
                  class="custom-item"
                >
                  East & Southeast Asia
                </div>
                <div
                  class="custom-item"
                >
                  Middle East & Central Asia 
                </div>
                <div
                  class="custom-item"
                >
                  South Asia
                </div>
                <div
                  class="custom-item"
                >
                  Eastern Europe
                </div>
              </div>
            </div>
          </label>
          <div
            class="flex flex-col pt-4"
          >
            <button
              class="button primary"
              role="finish-button"
              type="submit"
            >
              Finish sign up
            </button>
          </div>
        </form>
      </article>
    </div>
  </main>
  <div
    aria-live="assertive"
    class="pointer-events-none fixed inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6"
  >
    <div
      class="flex w-full flex-col items-center space-y-4 sm:items-end"
    >
      <div
        class="toast"
      >
        <div
          class="toast-content"
        >
          <div
            class="toast-icon-content"
          >
            <svg
              aria-hidden="true"
              class="h-6 w-6 text-red-400"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18 18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="toast-content-content"
          >
            <p
              class="toast-title"
            >
              Something went wrong
            </p>
            <p
              class="toast-description"
            >
              Please try again
            </p>
          </div>
          <div
            class="toast-close-content"
          >
            <button
              class="toast-close-btn"
              type="button"
            >
              <span
                class="sr-only"
              >
                Close
              </span>
              <svg
                aria-hidden="true"
                class="h-5 w-5"
                data-slot="icon"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignUpPage renders the sign in page at the sign up with form 1`] = `
<div>
  <main
    class="sign-up"
  >
    <div
      class="sign-up__content"
    >
      <article
        class="sign-up__form"
      >
        <section
          class="sign-up__header"
        >
          <img
            alt="DIMO Logo"
            class="w-44 h-6"
            src="/images/build-on-dimo.png"
          />
          <p>
            Get started building
          </p>
        </section>
        <section
          class="sign-up__buttons"
        >
          <button
            class="button dark"
            role="sign-in-button"
            type="button"
          >
            <svg
              class="icon sm"
              fill="none"
              role="google-icon"
              viewBox="0 0 25 25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M21.332 12.4909C21.332 11.8386 21.2735 11.2113 21.1647 10.6091H12.5V14.1679H17.4513C17.238 15.3179 16.5898 16.2922 15.6155 16.9446V19.2529H18.5887C20.3284 17.6513 21.332 15.2928 21.332 12.4909Z"
                fill="#4285F4"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M12.5 21.482C14.984 21.482 17.0665 20.6582 18.5887 19.2531L15.6155 16.9448C14.7916 17.4968 13.7378 17.8229 12.5 17.8229C10.1038 17.8229 8.07564 16.2046 7.35219 14.03H4.27855V16.4137C5.79237 19.4204 8.90364 21.482 12.5 21.482Z"
                fill="#34A853"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M7.35219 14.03C7.16818 13.478 7.06364 12.8884 7.06364 12.282C7.06364 11.6757 7.16818 11.086 7.35219 10.534V8.15039H4.27855C3.65546 9.39239 3.3 10.7975 3.3 12.282C3.3 13.7666 3.65546 15.1717 4.27855 16.4137L7.35219 14.03Z"
                fill="#FBBC05"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M12.5 6.74112C13.8507 6.74112 15.0635 7.2053 16.0169 8.11694L18.6556 5.47821C17.0624 3.99367 14.9798 3.08203 12.5 3.08203C8.90364 3.08203 5.79237 5.14367 4.27855 8.15039L7.35219 10.534C8.07564 8.35949 10.1038 6.74112 12.5 6.74112Z"
                fill="#EA4335"
                fill-rule="evenodd"
              />
            </svg>
            Sign Up
          </button>
          <button
            class="button dark"
            role="sign-in-button"
            type="button"
          >
            <svg
              class="icon sm"
              fill="none"
              role="github-icon"
              viewBox="0 0 25 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.5 0.851807C6.02836 0.851807 0.780518 6.09873 0.780518 12.5713C0.780518 17.7494 4.13851 22.1424 8.79507 23.692C9.38075 23.8005 9.59583 23.4378 9.59583 23.1282C9.59583 22.8488 9.58489 21.9255 9.57992 20.9463C6.31945 21.6552 5.63147 19.5635 5.63147 19.5635C5.09837 18.2089 4.33024 17.8488 4.33024 17.8488C3.26698 17.1214 4.41039 17.1362 4.41039 17.1362C5.58726 17.219 6.20695 18.344 6.20695 18.344C7.2522 20.1357 8.94857 19.6177 9.61733 19.3183C9.72248 18.5607 10.0263 18.0438 10.3614 17.7512C7.75837 17.4547 5.0219 16.4498 5.0219 11.9593C5.0219 10.6798 5.47972 9.6343 6.22947 8.8136C6.10777 8.51837 5.70666 7.32643 6.34298 5.71214C6.34298 5.71214 7.32711 5.39715 9.56669 6.91346C10.5015 6.65371 11.5041 6.52356 12.5 6.51915C13.496 6.52356 14.4994 6.65371 15.436 6.91346C17.6729 5.39715 18.6556 5.71214 18.6556 5.71214C19.2935 7.32643 18.8922 8.51837 18.7705 8.8136C19.5219 9.6343 19.9766 10.6797 19.9766 11.9593C19.9766 16.4605 17.235 17.4517 14.6254 17.7418C15.0457 18.1055 15.4202 18.8187 15.4202 19.9121C15.4202 21.4801 15.4066 22.7422 15.4066 23.1282C15.4066 23.4401 15.6176 23.8055 16.2117 23.6905C20.8657 22.139 24.2195 17.7477 24.2195 12.5713C24.2195 6.09873 18.9724 0.851807 12.5 0.851807Z"
                fill="white"
              />
              <path
                d="M5.16973 17.5461C5.14399 17.6043 5.05226 17.6218 4.96889 17.5819C4.88387 17.5437 4.83608 17.4642 4.86365 17.4058C4.88893 17.3459 4.98066 17.3291 5.0655 17.3694C5.1507 17.4075 5.19923 17.4877 5.16973 17.5461ZM5.74621 18.0605C5.69033 18.1123 5.58104 18.0883 5.50687 18.0064C5.43021 17.9246 5.41587 17.8155 5.47258 17.7628C5.53021 17.711 5.63619 17.7352 5.71303 17.817C5.78969 17.8996 5.80458 18.0082 5.74612 18.0606M6.14172 18.7186C6.06984 18.7685 5.95238 18.7217 5.87986 18.6175C5.80807 18.5134 5.80807 18.3884 5.88142 18.3383C5.95421 18.2882 6.06984 18.3332 6.14337 18.4366C6.21507 18.5426 6.21507 18.6676 6.14163 18.7187M6.81049 19.4808C6.74624 19.5516 6.60947 19.5327 6.50928 19.436C6.40689 19.3415 6.37831 19.2074 6.44274 19.1365C6.50772 19.0656 6.64532 19.0855 6.74624 19.1814C6.84799 19.2757 6.87906 19.4108 6.81058 19.4808M7.67485 19.7382C7.64663 19.8299 7.51483 19.8717 7.3821 19.8327C7.24956 19.7925 7.1628 19.685 7.18954 19.5922C7.21712 19.4999 7.34947 19.4564 7.48321 19.4981C7.61556 19.5381 7.70252 19.6448 7.67494 19.7382M8.6587 19.8473C8.66201 19.944 8.54941 20.0242 8.41007 20.0259C8.2699 20.0289 8.15657 19.9507 8.1551 19.8557C8.1551 19.7581 8.26512 19.6786 8.4052 19.6763C8.54454 19.6736 8.6587 19.7513 8.6587 19.8473ZM9.62508 19.8103C9.64181 19.9046 9.54494 20.0014 9.4066 20.0272C9.27057 20.052 9.14465 19.9938 9.12728 19.9003C9.11036 19.8036 9.20908 19.7069 9.34484 19.6818C9.48344 19.6577 9.60744 19.7144 9.62508 19.8103Z"
                fill="white"
              />
            </svg>
            Sign Up
          </button>
        </section>
        <section
          class="sign-up__extra-links"
        >
          <a
            class="anchor primary"
            href="/sign-in"
          >
            Already have an account?
          </a>
          <p
            class="terms-caption"
          >
            by signing up, you are agreeing to our
             
            <a
              class="anchor grey underline"
              href="#"
            >
              terms of service
            </a>
             
            and
             
            <a
              class="anchor grey underline"
              href="#"
            >
              privacy policy
            </a>
          </p>
        </section>
      </article>
    </div>
  </main>
  <div
    aria-live="assertive"
    class="pointer-events-none fixed inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6"
  >
    <div
      class="flex w-full flex-col items-center space-y-4 sm:items-end"
    >
      <div
        class="toast"
      >
        <div
          class="toast-content"
        >
          <div
            class="toast-icon-content"
          >
            <svg
              aria-hidden="true"
              class="h-6 w-6 text-red-400"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18 18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="toast-content-content"
          >
            <p
              class="toast-title"
            >
              Something went wrong
            </p>
            <p
              class="toast-description"
            >
              Please try again
            </p>
          </div>
          <div
            class="toast-close-content"
          >
            <button
              class="toast-close-btn"
              type="button"
            >
              <span
                class="sr-only"
              >
                Close
              </span>
              <svg
                aria-hidden="true"
                class="h-5 w-5"
                data-slot="icon"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignUpPage renders the sign in page with wrong flow 1`] = `
<div>
  <main
    class="sign-up"
  >
    <div
      class="sign-up__content"
    >
      <article
        class="sign-up__form"
      >
        <section
          class="sign-up__header"
        >
          <img
            alt="DIMO Logo"
            class="w-44 h-6"
            src="/images/build-on-dimo.png"
          />
          <p>
            What are you building?
          </p>
        </section>
        <form
          class="flex flex-col gap-4 w-full max-w-sm pt-4"
        >
          <div
            class="card flex flex-row card-border justify-between cursor-pointer"
          >
            <p
              class="text-xs font-medium"
            >
              Mobile app - IOS/Android
            </p>
            <svg
              class="w-4 h-5"
              fill="none"
              role="phone-icon"
              viewBox="0 0 15 23"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.5 0.281982H3.5C1.84 0.281982 0.5 1.62198 0.5 3.28198V19.282C0.5 20.942 1.84 22.282 3.5 22.282H11.5C13.16 22.282 14.5 20.942 14.5 19.282V3.28198C14.5 1.62198 13.16 0.281982 11.5 0.281982ZM9 20.282H6C5.72 20.282 5.5 20.062 5.5 19.782C5.5 19.502 5.72 19.282 6 19.282H9C9.28 19.282 9.5 19.502 9.5 19.782C9.5 20.062 9.28 20.282 9 20.282ZM12.5 17.282H2.5V3.28198H12.5V17.282Z"
                fill="white"
              />
              <path
                d="M11.5 0.281982H3.5C1.84 0.281982 0.5 1.62198 0.5 3.28198V19.282C0.5 20.942 1.84 22.282 3.5 22.282H11.5C13.16 22.282 14.5 20.942 14.5 19.282V3.28198C14.5 1.62198 13.16 0.281982 11.5 0.281982ZM9 20.282H6C5.72 20.282 5.5 20.062 5.5 19.782C5.5 19.502 5.72 19.282 6 19.282H9C9.28 19.282 9.5 19.502 9.5 19.782C9.5 20.062 9.28 20.282 9 20.282ZM12.5 17.282H2.5V3.28198H12.5V17.282Z"
                fill="url(#paint0_radial_1649_267)"
                fill-opacity="0.6"
              />
              <defs>
                <radialgradient
                  cx="0"
                  cy="0"
                  gradientTransform="translate(10.2337 9.77984) rotate(171.227) scale(9.84894 70.4556)"
                  gradientUnits="userSpaceOnUse"
                  id="paint0_radial_1649_267"
                  r="1"
                >
                  <stop
                    offset="0.260417"
                    stop-color="#6EE4DA"
                    stop-opacity="0.8"
                  />
                  <stop
                    offset="1"
                    stop-color="#B1E3FF"
                  />
                </radialgradient>
              </defs>
            </svg>
          </div>
          <div
            class="card flex flex-row card-border justify-between cursor-pointer"
          >
            <p
              class="text-xs font-medium"
            >
              Web application with single account login
            </p>
            <svg
              class="w-5 h-5"
              fill="none"
              role="computer-icon"
              viewBox="0 0 25 25"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#clip0_1493_10913)"
              >
                <path
                  d="M20.5 18.282C21.6 18.282 22.49 17.382 22.49 16.282L22.5 6.28198C22.5 5.18198 21.6 4.28198 20.5 4.28198H4.5C3.4 4.28198 2.5 5.18198 2.5 6.28198V16.282C2.5 17.382 3.4 18.282 4.5 18.282H0.5V20.282H24.5V18.282H20.5ZM4.5 6.28198H20.5V16.282H4.5V6.28198Z"
                  fill="white"
                />
                <path
                  d="M20.5 18.282C21.6 18.282 22.49 17.382 22.49 16.282L22.5 6.28198C22.5 5.18198 21.6 4.28198 20.5 4.28198H4.5C3.4 4.28198 2.5 5.18198 2.5 6.28198V16.282C2.5 17.382 3.4 18.282 4.5 18.282H0.5V20.282H24.5V18.282H20.5ZM4.5 6.28198H20.5V16.282H4.5V6.28198Z"
                  fill="url(#paint0_radial_1493_10913)"
                  fill-opacity="0.6"
                />
              </g>
              <defs>
                <radialgradient
                  cx="0"
                  cy="0"
                  gradientTransform="translate(17.1864 11.1895) rotate(176.254) scale(16.7221 51.7362)"
                  gradientUnits="userSpaceOnUse"
                  id="paint0_radial_1493_10913"
                  r="1"
                >
                  <stop
                    offset="0.260417"
                    stop-color="#6EE4DA"
                    stop-opacity="0.8"
                  />
                  <stop
                    offset="1"
                    stop-color="#B1E3FF"
                  />
                </radialgradient>
                <clippath
                  id="clip0_1493_10913"
                >
                  <rect
                    fill="white"
                    height="24"
                    transform="translate(0.5 0.281982)"
                    width="24"
                  />
                </clippath>
              </defs>
            </svg>
          </div>
          <div
            class="card flex flex-row card-border justify-between cursor-pointer"
          >
            <p
              class="text-xs font-medium"
            >
              Web application with multi-account management
            </p>
            <svg
              class="w-4 h-5"
              fill="none"
              role="car-rental-icon"
              viewBox="0 0 15 22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 17.282C5.05228 17.282 5.5 16.8343 5.5 16.282C5.5 15.7297 5.05228 15.282 4.5 15.282C3.94772 15.282 3.5 15.7297 3.5 16.282C3.5 16.8343 3.94772 17.282 4.5 17.282Z"
                fill="white"
              />
              <path
                d="M4.5 17.282C5.05228 17.282 5.5 16.8343 5.5 16.282C5.5 15.7297 5.05228 15.282 4.5 15.282C3.94772 15.282 3.5 15.7297 3.5 16.282C3.5 16.8343 3.94772 17.282 4.5 17.282Z"
                fill="url(#paint0_radial_1649_812)"
                fill-opacity="0.6"
              />
              <path
                d="M10.5 17.282C11.0523 17.282 11.5 16.8343 11.5 16.282C11.5 15.7297 11.0523 15.282 10.5 15.282C9.94771 15.282 9.5 15.7297 9.5 16.282C9.5 16.8343 9.94771 17.282 10.5 17.282Z"
                fill="white"
              />
              <path
                d="M10.5 17.282C11.0523 17.282 11.5 16.8343 11.5 16.282C11.5 15.7297 11.0523 15.282 10.5 15.282C9.94771 15.282 9.5 15.7297 9.5 16.282C9.5 16.8343 9.94771 17.282 10.5 17.282Z"
                fill="url(#paint1_radial_1649_812)"
                fill-opacity="0.6"
              />
              <path
                d="M12.75 9.38198C12.73 9.36198 12.72 9.34198 12.7 9.31198C12.32 8.79198 11.78 8.78198 11.78 8.78198H3.22C3.22 8.78198 2.68 8.79198 2.3 9.32198C2.28 9.34198 2.27 9.36198 2.25 9.38198C2.18 9.49198 2.11 9.62198 2.06 9.78198C1.84 10.442 1.32 12.002 0.5 14.472V20.972C0.5 21.422 0.85 21.782 1.28 21.782H1.72C2.15 21.782 2.5 21.422 2.5 20.972V19.782H12.5V20.972C12.5 21.422 12.84 21.782 13.28 21.782H13.72C14.15 21.782 14.5 21.422 14.5 20.972V14.472C13.68 12.012 13.16 10.442 12.94 9.78198C12.89 9.62198 12.82 9.49198 12.75 9.38198ZM3.83 10.782H11.17L11.4 11.472L11.83 12.782H3.17L3.83 10.782ZM12.5 17.782H2.5V14.782H12.5V17.782Z"
                fill="white"
              />
              <path
                d="M12.75 9.38198C12.73 9.36198 12.72 9.34198 12.7 9.31198C12.32 8.79198 11.78 8.78198 11.78 8.78198H3.22C3.22 8.78198 2.68 8.79198 2.3 9.32198C2.28 9.34198 2.27 9.36198 2.25 9.38198C2.18 9.49198 2.11 9.62198 2.06 9.78198C1.84 10.442 1.32 12.002 0.5 14.472V20.972C0.5 21.422 0.85 21.782 1.28 21.782H1.72C2.15 21.782 2.5 21.422 2.5 20.972V19.782H12.5V20.972C12.5 21.422 12.84 21.782 13.28 21.782H13.72C14.15 21.782 14.5 21.422 14.5 20.972V14.472C13.68 12.012 13.16 10.442 12.94 9.78198C12.89 9.62198 12.82 9.49198 12.75 9.38198ZM3.83 10.782H11.17L11.4 11.472L11.83 12.782H3.17L3.83 10.782ZM12.5 17.782H2.5V14.782H12.5V17.782Z"
                fill="url(#paint2_radial_1649_812)"
                fill-opacity="0.6"
              />
              <path
                d="M6.33 2.78198C5.91 1.61198 4.8 0.781982 3.5 0.781982C1.84 0.781982 0.5 2.12198 0.5 3.78198C0.5 5.43198 1.84 6.78198 3.5 6.78198C4.8 6.78198 5.91 5.94198 6.33 4.78198H11.5V6.78198H13.5V4.78198H14.5V2.78198H6.33ZM3.5 4.78198C2.95 4.78198 2.5 4.33198 2.5 3.78198C2.5 3.23198 2.95 2.78198 3.5 2.78198C4.05 2.78198 4.5 3.23198 4.5 3.78198C4.5 4.33198 4.05 4.78198 3.5 4.78198Z"
                fill="white"
              />
              <path
                d="M6.33 2.78198C5.91 1.61198 4.8 0.781982 3.5 0.781982C1.84 0.781982 0.5 2.12198 0.5 3.78198C0.5 5.43198 1.84 6.78198 3.5 6.78198C4.8 6.78198 5.91 5.94198 6.33 4.78198H11.5V6.78198H13.5V4.78198H14.5V2.78198H6.33ZM3.5 4.78198C2.95 4.78198 2.5 4.33198 2.5 3.78198C2.5 3.23198 2.95 2.78198 3.5 2.78198C4.05 2.78198 4.5 3.23198 4.5 3.78198C4.5 4.33198 4.05 4.78198 3.5 4.78198Z"
                fill="url(#paint3_radial_1649_812)"
                fill-opacity="0.6"
              />
              <defs>
                <radialgradient
                  cx="0"
                  cy="0"
                  gradientTransform="translate(10.2337 9.84812) rotate(171.62) scale(9.83876 67.3227)"
                  gradientUnits="userSpaceOnUse"
                  id="paint0_radial_1649_812"
                  r="1"
                >
                  <stop
                    offset="0.260417"
                    stop-color="#6EE4DA"
                    stop-opacity="0.8"
                  />
                  <stop
                    offset="1"
                    stop-color="#B1E3FF"
                  />
                </radialgradient>
                <radialgradient
                  cx="0"
                  cy="0"
                  gradientTransform="translate(10.2337 9.84812) rotate(171.62) scale(9.83876 67.3227)"
                  gradientUnits="userSpaceOnUse"
                  id="paint1_radial_1649_812"
                  r="1"
                >
                  <stop
                    offset="0.260417"
                    stop-color="#6EE4DA"
                    stop-opacity="0.8"
                  />
                  <stop
                    offset="1"
                    stop-color="#B1E3FF"
                  />
                </radialgradient>
                <radialgradient
                  cx="0"
                  cy="0"
                  gradientTransform="translate(10.2337 9.84812) rotate(171.62) scale(9.83876 67.3227)"
                  gradientUnits="userSpaceOnUse"
                  id="paint2_radial_1649_812"
                  r="1"
                >
                  <stop
                    offset="0.260417"
                    stop-color="#6EE4DA"
                    stop-opacity="0.8"
                  />
                  <stop
                    offset="1"
                    stop-color="#B1E3FF"
                  />
                </radialgradient>
                <radialgradient
                  cx="0"
                  cy="0"
                  gradientTransform="translate(10.2337 9.84812) rotate(171.62) scale(9.83876 67.3227)"
                  gradientUnits="userSpaceOnUse"
                  id="paint3_radial_1649_812"
                  r="1"
                >
                  <stop
                    offset="0.260417"
                    stop-color="#6EE4DA"
                    stop-opacity="0.8"
                  />
                  <stop
                    offset="1"
                    stop-color="#B1E3FF"
                  />
                </radialgradient>
              </defs>
            </svg>
          </div>
          <div
            class="card flex flex-col gap-4 card-border"
          >
            <label
              class="label text-xs text-medium"
              for="buildForText"
            >
              Something else
              <input
                class="text-field"
                name="buildForText"
                placeholder="Enter text..."
                role="build-for-something-else-input"
                type="text"
              />
            </label>
          </div>
          <div
            class="flex flex-col items-center"
          />
          <div
            class="flex flex-col pt-4"
          >
            <button
              class="button primary"
              role="continue-button"
              type="submit"
            >
              Continue
            </button>
          </div>
        </form>
      </article>
    </div>
  </main>
  <div
    aria-live="assertive"
    class="pointer-events-none fixed inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6"
  >
    <div
      class="flex w-full flex-col items-center space-y-4 sm:items-end"
    >
      <div
        class="toast"
      >
        <div
          class="toast-content"
        >
          <div
            class="toast-icon-content"
          >
            <svg
              aria-hidden="true"
              class="h-6 w-6 text-red-400"
              data-slot="icon"
              fill="none"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18 18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="toast-content-content"
          >
            <p
              class="toast-title"
            >
              Something went wrong
            </p>
            <p
              class="toast-description"
            >
              Please try again
            </p>
          </div>
          <div
            class="toast-close-content"
          >
            <button
              class="toast-close-btn"
              type="button"
            >
              <span
                class="sr-only"
              >
                Close
              </span>
              <svg
                aria-hidden="true"
                class="h-5 w-5"
                data-slot="icon"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
